Worked on items and professions

--- a/html/.settings/com.google.gdt.eclipse.core.prefs
+++ b/html/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,4 @@
-#Thu Aug 14 12:27:05 EDT 2014
-warSrcDir=webapp/
-lastWarOutDir=/Users/BrandonWebster/Documents/Games/Game Design/Obelisk/html/war
 eclipse.preferences.version=1
+lastWarOutDir=/Users/BrandonWebster/Documents/Games/GameDesign/Obelisk_Work/Obelisk/html/war
+warSrcDir=webapp/
 warSrcDirIsOutput=false
